<resources>
  <string name="app_name">Foodish</string>
  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="main_course">Main Course</string>
  <string name="bread">Bread</string>
  <string name="marinade">Marinade</string>
  <string name="breakfast">Breakfast</string>
  <string name="side_dish">Side Dish</string>
  <string name="finger_food">Finger Food</string>
  <string name="dessert">Dessert</string>
  <string name="soup">Soup</string>
  <string name="snack">Snack</string>
  <string name="beverage">Beverage</string>
  <string name="drink">Drink</string>
  <string name="salad">Salad</string>
  <string name="sauce">Sauce</string>
  <string name="gluten_free">Gluten Free</string>
  <string name="ketogenic">Ketogenic</string>
  <string name="vegetarian">Vegetarian</string>
  <string name="lactovegetarian">Lacto-Vegetarian</string>
  <string name="ovo_vegetarian">Ovo-Vegetarian</string>
  <string name="vegan">Vegan</string>
  <string name="pescetarian">Pescetarian</string>
  <string name="paleo">Paleo</string>
  <string name="primal">Primal</string>
  <string name="whole_30">Whole 30</string>
  <string name="meal_type">Meal Type</string>
  <string name="apply">Apply</string>
  <string name="search">Search</string>
</resources>