<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

  <com.google.android.material.chip.ChipGroup
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:checkedChip="@id/chipMainCourse"
      app:selectionRequired="true"
      app:singleSelection="true"
      app:singleLine="true"
      android:layout_marginTop="4dp"
      app:layout_constraintHorizontal_bias="0.0"
      >

    <com.google.android.material.chip.Chip
        android:text="@string/main_course"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/chipMainCourse"
        />

    <com.google.android.material.chip.Chip
        android:text="@string/bread"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/chipBread"
        />

    <com.google.android.material.chip.Chip
        android:text="@string/marinade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/chipMarinade"
        />

    <com.google.android.material.chip.Chip
        android:text="@string/side_dish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/chipSideDish"
        />

    <com.google.android.material.chip.Chip
        android:text="@string/breakfast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/chipBreakfast"
        />

    <com.google.android.material.chip.Chip
        android:text="@string/finger_food"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/chipFingerFood"
        />

    <com.google.android.material.chip.Chip
        android:text="@string/dessert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/chipDessert"
        />

    <com.google.android.material.chip.Chip
        android:text="@string/soup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/chipSoup"
        />

    <com.google.android.material.chip.Chip
        android:text="@string/snack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/chipSnack"
        />

    <com.google.android.material.chip.Chip
        android:text="@string/beverage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/chipBeverage"
        />

    <com.google.android.material.chip.Chip
        android:text="@string/drink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/chipDrink"
        />

    <com.google.android.material.chip.Chip
        android:text="@string/salad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/chipSalad"
        />

    <com.google.android.material.chip.Chip
        android:text="@string/sauce"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/chipSauce"
        />

  </com.google.android.material.chip.ChipGroup>
</LinearLayout>